# FileTrunk

./: .gitignore  LICENSE  README.md  actions.yml  deploy.sh  docker-compose.yaml
.github/workflows/: deploy.yml  test.yml  testapp.yml
backend/: .env  .env.example  Dockerfile  backend-point.sh  celery-point.sh  manage.py  pyproject.toml
backend/backend/: celery_config.py  settings.py  urls.py
backend/main/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/main/migrations/: 0001_initial.py
backend/tests/: conftest.py  test_main.py  test_users.py
backend/users/: admin.py  middleware.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_stats.py  0003_alter_stats_used_storage.py  0004_stats_files_in_use.py  0005_auto_20210913_0852.py  0006_remove_stats_files_in_use.py
docs/: DOC.md
frontend/: .env  Dockerfile  nginx-proxy.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Main.js  Profile.js
frontend/src/components/subcomponent/: BreadCrumb.js  Delete.js  Download.js  FileForm.js  FilesList.js  Header.js  Login.js  Logout.js  Share.js  ShareFile.js  UpdateFiles.js  getJWT.js
frontend/src/service/: Api.js
