[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Back-end for my storage app"
authors = ["Fedir Zhydok <fedir.zhydok@dataart.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.6"
django-rest-auth = "^0.9.5"
django-allauth = "^0.45.0"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
django-safedelete = "^1.0.0"
django-dotenv = "^1.4.2"
google = "^3.0.0"
gunicorn = "^20.1.0"
google-auth = "^2.0.1"
psycopg2 = "2.8.6"
PyJWT = "2.1.0"
celery = "^5.1.2"
django-celery-beat = "^2.2.1"
django-celery-results = "^2.2.0"
redis = "^3.5.3"
sentry-sdk = "^1.3.1"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.3"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
coverage = "^5.5"
pytest-celery = "^0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
